--- a/scripts/EDA_movie_YKS.ipynb
+++ b/scripts/EDA_movie_YKS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -28,12 +28,12 @@
     }
    ],
    "source": [
-    "movies = pd.read_csv(r\"D:\\team3_data\\project-team3-data\\data-files\\total_tmdbmovielist.csv\", index_col=0)"
+    "movies = pd.read_csv(r\"D:\\team3_data\\project_team3\\project-team3-data\\data-files\\total_tmdbmovielist.csv\", index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1855,6 +1855,94 @@
     "## original_language에 따른 vote_count (original_language에 따른 vote_average해석 참고용)\n",
     "movies_revenue_budget_runtime_zero_removal.groupby(by='original_language')['vote_count'].mean()\n",
     "sns.catplot(data=movies_revenue_budget_runtime_zero_removal, x='original_language', y='vote_count', kind='bar',height=5, aspect=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['fi', 'en', 'de', 'he', 'es', 'zh', 'ja', 'da', 'fr', 'ko', 'pl',\n",
+       "       'sv', 'it', 'bs', 'hi', 'ru', 'no', 'pt', 'nl', 'el', 'cs', 'bn',\n",
+       "       'cn', 'af', 'sr', 'mn', 'et', 'is', 'ca', 'ro', 'hu', 'se', 'fa',\n",
+       "       'th', 'tr', 'ht', 'bg', 'ab', 'zu', 'hr', 'ta', 'te', 'id', 'am',\n",
+       "       'ar', 'lt', 'iu', 'xx', 'bo', 'pa', 'ps', 'ur', 'sk', 'ms', 'kk',\n",
+       "       'ka', 'tl', 'yi', 'uz', 'gd', 'ml', 'mk', 'vi', 'sl', 'sq', 'tk',\n",
+       "       'uk', 'sh', 'eu', 'gl', 'nb', 'la', 'mr', 'si', 'lv', 'ga', 'mt',\n",
+       "       'tg', 'mo', 'kn', 'ku', 'wo', 'bm', 'sw', 'az', 'kl', 'km', 'cr',\n",
+       "       'ne', 'hy', 'cy', 'qu', 'dz', 'lo', 'ff', 'sa', 'ky', 'co', 'be',\n",
+       "       'fy', 'gu', 'ig', 'lb', 'nn', 'ay', 'mg', 'mh', 'fo', 'yo', 'my',\n",
+       "       'so', 'mi', 'to', 'dv', 'tw', 'sm', 'ln', 'sn', 'as', 'ch', 'ha',\n",
+       "       'ks', 'av', 'ak', 'ti', 'jv', 'za', 'xh', 'sg', 'or', 'gn',\n",
+       "       'Released', 'st', 'ny', nan, 'ty', '0.6', 'rw', 'oj', 'su', 'eo',\n",
+       "       'ie', 'bi', 'ss', 'kg', 'om', 'rn', 'tt', 'ce', 'an', 'rm', 'lg',\n",
+       "       'nv', 'oc', 'pi', 'gv', 'os', 'sd', 'ba', 'kw', 'ts', 'ug', 'ii',\n",
+       "       'fj', 'tn', 'sc', 'li'], dtype=object)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#original language 총 종류\n",
+    "movies_lang=movies['original_language'].unique()\n",
+    "movies_lang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies['original_language'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "en    346708\n",
+       "fr     37932\n",
+       "de     37421\n",
+       "es     34140\n",
+       "ja     22839\n",
+       "pt     17697\n",
+       "ru     14225\n",
+       "it     13774\n",
+       "zh     11866\n",
+       "ko      7925\n",
+       "Name: original_language, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 영화제작시 사용된 언어 빈도\n",
+    "movies['original_language'].value_counts().head(10)"
    ]
   },
   {
