--- a/scripts/team3_data_collection _movie_genre.ipynb
+++ b/scripts/team3_data_collection _movie_genre.ipynb
@@ -318,8 +318,8 @@
    "source": [
     "# 1. 영화테이블에서 장르id만 추출하여 genre_ids칼럼을 만들기  \n",
     "\n",
+    "# str자료형을 list로 변경하는 함수\n",
     "error_list_x = []\n",
-    "\n",
     "def genres_str_to_list(genres_str):\n",
     "    import json\n",
     "    # print(genres_str)\n",
@@ -334,8 +334,8 @@
     "    \n",
     "    return genre_id_list\n",
     "\n",
+    "# 장르 id를 추출하여 genre_ids칼럼 추가\n",
     "tmdb_movie_list['genre_ids'] = tmdb_movie_list[\"genres\"].map(genres_str_to_list)\n",
-    "\n",
     "tmdb_movie_list.tail(5)"
    ]
   },
