--- a/scripts/team3_data_collection_Lana_Wachowski_movies.ipynb
+++ b/scripts/team3_data_collection_Lana_Wachowski_movies.ipynb
@@ -284,8 +284,8 @@
     }
    ],
    "source": [
-    "Taylor_Sheridan_url=\"https://api.themoviedb.org/3/discover/movie?api_key=36927ad1d2817ff0fa31947e47d186fd&with_crew=9340\"\n",
-    "response = requests.get(Taylor_Sheridan_url)\n",
+    "Lana_Wachowski_url=\"https://api.themoviedb.org/3/discover/movie?api_key=36927ad1d2817ff0fa31947e47d186fd&with_crew=9340\"\n",
+    "response = requests.get(Lana_Wachowski_url)\n",
     "json_object = response.content\n",
     "movie_data = json.loads(json_object)\n",
     "movie_data\n",
