--- a/scripts/team3_data_collection_crew.ipynb
+++ b/scripts/team3_data_collection_crew.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,199 +16,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 크롤링 후 csv파일로 저장해둔 현재 상영 중인 영화정보 가져오기 \n",
+    "now_playing_movies=pd.read_csv(\"../data-files/now_playing_movies.csv\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\.conda\\envs\\ykseo\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3441: DtypeWarning: Columns (1,4,7,12,17,23) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1. 영화id를 사용하기 위해 영화정보 파일가져오기 \n",
-    "tmdb_movie_list = pd.read_csv('../data-files/total_tmdbmovielist.csv', index_col=0) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 630159 entries, 0 to 630185\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column                 Non-Null Count   Dtype  \n",
-      "---  ------                 --------------   -----  \n",
-      " 0   adult                  630158 non-null  object \n",
-      " 1   backdrop_path          150102 non-null  object \n",
-      " 2   belongs_to_collection  11995 non-null   object \n",
-      " 3   budget                 630157 non-null  object \n",
-      " 4   genres                 630155 non-null  object \n",
-      " 5   homepage               69801 non-null   object \n",
-      " 6   id                     630156 non-null  object \n",
-      " 7   imdb_id                396414 non-null  object \n",
-      " 8   original_language      630157 non-null  object \n",
-      " 9   original_title         630130 non-null  object \n",
-      " 10  overview               25238 non-null   object \n",
-      " 11  popularity             630119 non-null  object \n",
-      " 12  poster_path            426255 non-null  object \n",
-      " 13  production_companies   630119 non-null  object \n",
-      " 14  production_countries   630088 non-null  object \n",
-      " 15  release_date           571778 non-null  object \n",
-      " 16  revenue                630088 non-null  object \n",
-      " 17  runtime                577000 non-null  float64\n",
-      " 18  spoken_languages       630088 non-null  object \n",
-      " 19  status                 630088 non-null  object \n",
-      " 20  tagline                8100 non-null    object \n",
-      " 21  title                  630086 non-null  object \n",
-      " 22  video                  630086 non-null  object \n",
-      " 23  vote_average           630086 non-null  float64\n",
-      " 24  vote_count             630086 non-null  float64\n",
-      "dtypes: float64(3), object(22)\n",
-      "memory usage: 125.0+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 2. 영화정보 중 id만 가져오기\n",
-    "tmdb_movie_list.info()\n",
-    "tmdb_movie_id_list = tmdb_movie_list[[\"id\"]]\n",
-    "# del tmdb_movie_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(630159, 1)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    id\n",
-       "0  2.0\n",
-       "1  3.0\n",
-       "2  5.0\n",
-       "3  6.0\n",
-       "4  8.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(tmdb_movie_id_list.shape)\n",
-    "tmdb_movie_id_list.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## 영화id를 이용하여 crew정보 crawling  (너무 오래걸림)\n",
-    "\n",
-    "all_crew_list = []\n",
-    "all_cast_list = []\n",
-    "error_list = []\n",
-    "for idx,  movie_id in enumerate(tmdb_movie_id_list[\"id\"].values):\n",
-    "    try :\n",
-    "        crew_url=\"https://api.themoviedb.org/3/movie/{0}?api_key=36927ad1d2817ff0fa31947e47d186fd&append_to_response=credits\"\n",
-    "        response = requests.get(crew_url.format(movie_id))\n",
-    "        json_object = response.content\n",
-    "        movie_data = json.loads(json_object)\n",
-    "        \n",
-    "        # crew_list += movie_data[\"credit\"]['crew']\n",
-    "        crew_list = movie_data[\"credits\"][\"crew\"]\n",
-    "        for crew in crew_list:\n",
-    "            crew[\"movie_id\"] = movie_id\n",
-    "            all_crew_list.append(crew)\n",
-    "    except:\n",
-    "        error_list.append(movie_id)\n",
-    "\n",
-    "    if idx == 500:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "# 현재 상영 중인 영화\n",
-    "\n",
-    "now_playing_movies=pd.read_csv(\"../data-files/top_rated_movies.csv\", index_col=0, lineterminator='\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +39,7 @@
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
       " 0   adult              200 non-null    bool   \n",
-      " 1   backdrop_path      199 non-null    object \n",
+      " 1   backdrop_path      200 non-null    object \n",
       " 2   genre_ids          200 non-null    object \n",
       " 3   id                 200 non-null    int64  \n",
       " 4   original_language  200 non-null    object \n",
@@ -245,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,15 +93,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>19404</td>\n",
+       "      <td>580489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>278</td>\n",
+       "      <td>512195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>238</td>\n",
+       "      <td>585245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -339,22 +157,26 @@
        "[200 rows x 1 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 필요한 정보인 영화id만 가져오기 \n",
+    "\n",
     "now_playing_movies_id_list = now_playing_movies[[\"id\"]]\n",
     "now_playing_movies_id_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 현재상영 중인 영화id를 하나씩 넣어 crew정보 크롤링하기 \n",
+    "\n",
     "all_crew_list = []\n",
     "error_list = []\n",
     "for idx,  movie_id in enumerate(now_playing_movies_id_list[\"id\"].values):\n",
@@ -378,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -405,155 +227,23 @@
       "dtypes: bool(1), float64(1), int64(3), object(7)\n",
       "memory usage: 1.2+ MB\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adult</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>id</th>\n",
-       "      <th>known_for_department</th>\n",
-       "      <th>name</th>\n",
-       "      <th>original_name</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>profile_path</th>\n",
-       "      <th>credit_id</th>\n",
-       "      <th>department</th>\n",
-       "      <th>job</th>\n",
-       "      <th>movie_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8311</td>\n",
-       "      <td>Crew</td>\n",
-       "      <td>Farah Khan</td>\n",
-       "      <td>Farah Khan</td>\n",
-       "      <td>1.400</td>\n",
-       "      <td>/yfmm3VIGRZ8RDRQ0pjn3Vizw6WC.jpg</td>\n",
-       "      <td>57a3054a9251417c57000d7a</td>\n",
-       "      <td>Crew</td>\n",
-       "      <td>Choreographer</td>\n",
-       "      <td>19404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>35770</td>\n",
-       "      <td>Directing</td>\n",
-       "      <td>Yash Chopra</td>\n",
-       "      <td>Yash Chopra</td>\n",
-       "      <td>0.656</td>\n",
-       "      <td>/uDthb94NlawtgRT8BKufFkZdJR5.jpg</td>\n",
-       "      <td>57a304a39251410cd20008a5</td>\n",
-       "      <td>Production</td>\n",
-       "      <td>Producer</td>\n",
-       "      <td>19404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>35771</td>\n",
-       "      <td>Production</td>\n",
-       "      <td>Aditya Chopra</td>\n",
-       "      <td>Aditya Chopra</td>\n",
-       "      <td>0.732</td>\n",
-       "      <td>None</td>\n",
-       "      <td>57a3042b9251412769000193</td>\n",
-       "      <td>Writing</td>\n",
-       "      <td>Screenplay</td>\n",
-       "      <td>19404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>35771</td>\n",
-       "      <td>Production</td>\n",
-       "      <td>Aditya Chopra</td>\n",
-       "      <td>Aditya Chopra</td>\n",
-       "      <td>0.732</td>\n",
-       "      <td>None</td>\n",
-       "      <td>52fe47d69251416c750a71af</td>\n",
-       "      <td>Directing</td>\n",
-       "      <td>Director</td>\n",
-       "      <td>19404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>35771</td>\n",
-       "      <td>Production</td>\n",
-       "      <td>Aditya Chopra</td>\n",
-       "      <td>Aditya Chopra</td>\n",
-       "      <td>0.732</td>\n",
-       "      <td>None</td>\n",
-       "      <td>5d6a2a3a7776f0000f7387b8</td>\n",
-       "      <td>Writing</td>\n",
-       "      <td>Dialogue</td>\n",
-       "      <td>19404</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   adult  gender     id known_for_department           name  original_name  \\\n",
-       "0  False       1   8311                 Crew     Farah Khan     Farah Khan   \n",
-       "1  False       2  35770            Directing    Yash Chopra    Yash Chopra   \n",
-       "2  False       2  35771           Production  Aditya Chopra  Aditya Chopra   \n",
-       "3  False       2  35771           Production  Aditya Chopra  Aditya Chopra   \n",
-       "4  False       2  35771           Production  Aditya Chopra  Aditya Chopra   \n",
-       "\n",
-       "   popularity                      profile_path                 credit_id  \\\n",
-       "0       1.400  /yfmm3VIGRZ8RDRQ0pjn3Vizw6WC.jpg  57a3054a9251417c57000d7a   \n",
-       "1       0.656  /uDthb94NlawtgRT8BKufFkZdJR5.jpg  57a304a39251410cd20008a5   \n",
-       "2       0.732                              None  57a3042b9251412769000193   \n",
-       "3       0.732                              None  52fe47d69251416c750a71af   \n",
-       "4       0.732                              None  5d6a2a3a7776f0000f7387b8   \n",
-       "\n",
-       "   department            job  movie_id  \n",
-       "0        Crew  Choreographer     19404  \n",
-       "1  Production       Producer     19404  \n",
-       "2     Writing     Screenplay     19404  \n",
-       "3   Directing       Director     19404  \n",
-       "4     Writing       Dialogue     19404  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# crew 정보 csv파일로 저장 \n",
+    "# crew 정보 확인 \n",
     "crews=pd.DataFrame(all_crew_list)\n",
-    "crews.info()\n",
-    "crews.head()"
+    "crews.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crew 정보 csv파일로 저장하기 \n",
+    "\n",
+    "crews.to_csv(\"../data-files/crew.csv\", header=True, index=True)"
    ]
   },
   {
@@ -562,16 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crews.to_csv(\"../data-files/crew.csv\", header=True, index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# crew정보 DB(mysql)에 저장\n",
+    "\n",
     "import pymysql\n",
     "\n",
     "conn = pymysql.connect(host=\"localhost\",\n",
@@ -581,7 +263,7 @@
     "                       charset=\"utf8\")\n",
     "\n",
     "cursor = conn.cursor()\n",
-    "# cursor.execute('DELETE FROM crew')\n",
+    "cursor.execute('DELETE FROM crew')\n",
     "#error_list=[]\n",
     "for a in crews.values:\n",
     "    sql= \"\"\"INSERT INTO crew \n",
