--- a/scripts/team3_data_collection_now_playing_movies.ipynb
+++ b/scripts/team3_data_collection_now_playing_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,15 @@
     "import pandas as pd\n",
     "import requests\n",
     "\n",
+    "# 현재 상영 중인 영화 200편 크롤링하기 \n",
+    "\n",
     "now_playing = []\n",
     "for i in range(1,1000):\n",
     "    url = 'https://api.themoviedb.org/3/movie/now_playing?api_key={1}&language=ko-KR&page={0}'.format(i,'5ecfbcb3280f5e9f7898c3ca00acca81')\n",
     "    resp = requests.get(url)\n",
     "    now_playing.append(json.loads(resp.content))\n",
     "\n",
-    "    if i == 10:\n",
+    "    if i == 10:       \n",
     "        break\n",
     "\n",
     "now_playing_movies = []\n",
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +42,7 @@
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
       " 0   adult              200 non-null    bool   \n",
-      " 1   backdrop_path      200 non-null    object \n",
+      " 1   backdrop_path      199 non-null    object \n",
       " 2   genre_ids          200 non-null    object \n",
       " 3   id                 200 non-null    int64  \n",
       " 4   original_language  200 non-null    object \n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,12 +128,12 @@
        "      <td>en</td>\n",
        "      <td>Venom: Let There Be Carnage</td>\n",
        "      <td>연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...</td>\n",
-       "      <td>11473.714</td>\n",
+       "      <td>8364.759</td>\n",
        "      <td>/1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg</td>\n",
        "      <td>2021-09-30</td>\n",
        "      <td>베놈 2: 렛 데어 비 카니지</td>\n",
        "      <td>7.2</td>\n",
-       "      <td>3947</td>\n",
+       "      <td>4186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -139,12 +141,12 @@
        "      <td>en</td>\n",
        "      <td>Red Notice</td>\n",
        "      <td>인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...</td>\n",
-       "      <td>3991.047</td>\n",
+       "      <td>3605.814</td>\n",
        "      <td>/gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg</td>\n",
        "      <td>2021-11-04</td>\n",
        "      <td>레드 노티스</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>1716</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>1853</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -156,19 +158,19 @@
        "1  512195                en                   Red Notice   \n",
        "\n",
        "                                            overview  popularity  \\\n",
-       "0  연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...   11473.714   \n",
-       "1  인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...    3991.047   \n",
+       "0  연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...    8364.759   \n",
+       "1  인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...    3605.814   \n",
        "\n",
        "                        poster_path release_date             title  \\\n",
        "0  /1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg   2021-09-30  베놈 2: 렛 데어 비 카니지   \n",
        "1  /gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg   2021-11-04            레드 노티스   \n",
        "\n",
        "   vote_average  vote_count  \n",
-       "0           7.2        3947  \n",
-       "1           6.9        1716  "
+       "0           7.2        4186  \n",
+       "1           6.8        1853  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,9 +205,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>adult</th>\n",
-       "      <th>backdrop_path</th>\n",
-       "      <th>genre_ids</th>\n",
        "      <th>movie_id</th>\n",
        "      <th>original_language</th>\n",
        "      <th>subtitle</th>\n",
@@ -214,7 +213,6 @@
        "      <th>posterpath</th>\n",
        "      <th>release_date</th>\n",
        "      <th>title</th>\n",
-       "      <th>video</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
        "    </tr>\n",
@@ -222,62 +220,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>/lNyLSOKMMeUPr1RsL4KcRuIXwHt.jpg</td>\n",
-       "      <td>[878, 28, 12]</td>\n",
        "      <td>580489</td>\n",
        "      <td>en</td>\n",
        "      <td>Venom: Let There Be Carnage</td>\n",
        "      <td>연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...</td>\n",
-       "      <td>10424.410</td>\n",
+       "      <td>8364.759</td>\n",
        "      <td>/1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg</td>\n",
        "      <td>2021-09-30</td>\n",
        "      <td>베놈 2: 렛 데어 비 카니지</td>\n",
-       "      <td>False</td>\n",
        "      <td>7.2</td>\n",
-       "      <td>4087</td>\n",
+       "      <td>4186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>/5uVhMGsps81CN0S4U9NF0Z4tytG.jpg</td>\n",
-       "      <td>[28, 35, 80, 53]</td>\n",
        "      <td>512195</td>\n",
        "      <td>en</td>\n",
        "      <td>Red Notice</td>\n",
        "      <td>인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...</td>\n",
-       "      <td>3819.259</td>\n",
+       "      <td>3605.814</td>\n",
        "      <td>/gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg</td>\n",
        "      <td>2021-11-04</td>\n",
        "      <td>레드 노티스</td>\n",
-       "      <td>False</td>\n",
        "      <td>6.8</td>\n",
-       "      <td>1788</td>\n",
+       "      <td>1853</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   adult                     backdrop_path         genre_ids  movie_id  \\\n",
-       "0  False  /lNyLSOKMMeUPr1RsL4KcRuIXwHt.jpg     [878, 28, 12]    580489   \n",
-       "1  False  /5uVhMGsps81CN0S4U9NF0Z4tytG.jpg  [28, 35, 80, 53]    512195   \n",
-       "\n",
-       "  original_language                     subtitle  \\\n",
-       "0                en  Venom: Let There Be Carnage   \n",
-       "1                en                   Red Notice   \n",
+       "   movie_id original_language                     subtitle  \\\n",
+       "0    580489                en  Venom: Let There Be Carnage   \n",
+       "1    512195                en                   Red Notice   \n",
        "\n",
        "                                            overview  popularity  \\\n",
-       "0  연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...   10424.410   \n",
-       "1  인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...    3819.259   \n",
+       "0  연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...    8364.759   \n",
+       "1  인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...    3605.814   \n",
        "\n",
-       "                         posterpath release_date             title  video  \\\n",
-       "0  /1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg   2021-09-30  베놈 2: 렛 데어 비 카니지  False   \n",
-       "1  /gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg   2021-11-04            레드 노티스  False   \n",
+       "                         posterpath release_date             title  \\\n",
+       "0  /1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg   2021-09-30  베놈 2: 렛 데어 비 카니지   \n",
+       "1  /gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg   2021-11-04            레드 노티스   \n",
        "\n",
        "   vote_average  vote_count  \n",
-       "0           7.2        4087  \n",
-       "1           6.8        1788  "
+       "0           7.2        4186  \n",
+       "1           6.8        1853  "
       ]
      },
      "execution_count": 6,
@@ -300,9 +286,6 @@
     {
      "data": {
       "text/plain": [
-       "adult                0\n",
-       "backdrop_path        0\n",
-       "genre_ids            0\n",
        "movie_id             0\n",
        "original_language    0\n",
        "subtitle             0\n",
@@ -311,7 +294,6 @@
        "posterpath           0\n",
        "release_date         0\n",
        "title                0\n",
-       "video                0\n",
        "vote_average         0\n",
        "vote_count           0\n",
        "dtype: int64"
@@ -323,6 +305,8 @@
     }
    ],
    "source": [
+    "# na확인\n",
+    "\n",
     "now_playing_movies.isna().sum()"
    ]
   },
@@ -366,15 +350,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>585245</td>\n",
+       "      <td>566525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>589761</td>\n",
+       "      <td>585245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>566525</td>\n",
+       "      <td>568124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -382,23 +366,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>195</th>\n",
-       "      <td>769749</td>\n",
+       "      <td>604563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>579047</td>\n",
+       "      <td>72559</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>4232</td>\n",
+       "      <td>177677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>712121</td>\n",
+       "      <td>447200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>672741</td>\n",
+       "      <td>49040</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -409,15 +393,15 @@
        "     movie_id\n",
        "0      580489\n",
        "1      512195\n",
-       "2      585245\n",
-       "3      589761\n",
-       "4      566525\n",
+       "2      566525\n",
+       "3      585245\n",
+       "4      568124\n",
        "..        ...\n",
-       "195    769749\n",
-       "196    579047\n",
-       "197      4232\n",
-       "198    712121\n",
-       "199    672741\n",
+       "195    604563\n",
+       "196     72559\n",
+       "197    177677\n",
+       "198    447200\n",
+       "199     49040\n",
        "\n",
        "[200 rows x 1 columns]"
       ]
@@ -428,6 +412,8 @@
     }
    ],
    "source": [
+    "# DB에 저장할 영화id만 가져오기 \n",
+    "\n",
     "now_playing_movies_ids=now_playing_movies[[\"movie_id\"]]\n",
     "now_playing_movies_ids"
    ]
@@ -446,13 +432,15 @@
     "                       password=\"mysql\",\n",
     "                       charset=\"utf8\")\n",
     "cursor = conn.cursor()\n",
+    "\n",
     "error_list = []\n",
+    "\n",
     "cursor.execute('DELETE FROM crew')\n",
     "cursor.execute('DELETE FROM actor')\n",
     "cursor.execute('DELETE FROM now_playing_movies')\n",
     "for movie_id in now_playing_movies_ids.values:\n",
     "    try:\n",
-    "        # print(type(movie_id), movie_id)  # movie_id type이 nd.arrary임. \n",
+    "        # print(type(movie_id), movie_id)  # movie_id type이 nd.arrary임. 삽입시 일차원으로 변경필요.\n",
     "        sql= \"INSERT INTO now_playing_movies VALUES(%s)\"\n",
     "        cursor.execute(sql, movie_id[0])\n",
     "    except:\n",
@@ -491,12 +479,12 @@
    "source": [
     "#없는 영화 업데이트\n",
     "\n",
-    "popular_movies = []\n",
+    "movies = []\n",
     "for i in error_list:\n",
     "        for e in i:\n",
     "                url=\"https://api.themoviedb.org/3/movie/{0}?api_key={1}&language=ko-KR\".format(e,'36927ad1d2817ff0fa31947e47d186fd')\n",
     "                response = requests.get(url)\n",
-    "                popular_movies.append(json.loads(response.content))"
+    "                movies.append(json.loads(response.content))"
    ]
   },
   {
@@ -505,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies2 = pd.DataFrame(popular_movies)"
+    "movies2 = pd.DataFrame(movies)"
    ]
   },
   {
@@ -595,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
